api/gtkdoc_h/239/geany-gtkdoc.h


typedef enum {
	GEANY_GBG_FT,
	GEANY_GBG_NON_FT,
	GEANY_GBG_EXEC,
	GEANY_GBG_COUNT,
} GeanyBuildGroup;
typedef enum {
	GEANY_BCS_DEF,
	GEANY_BCS_FT,
	GEANY_BCS_HOME_FT,
	GEANY_BCS_PREF,
	GEANY_BCS_PROJ_FT,
	GEANY_BCS_PROJ,
	GEANY_BCS_COUNT,
} GeanyBuildSource;
typedef enum {
	GEANY_BC_LABEL,
	GEANY_BC_COMMAND,
	GEANY_BC_WORKING_DIR,
	GEANY_BC_CMDENTRIES_COUNT,
} GeanyBuildCmdEntries;
typedef enum {
	SPAWN_ASYNC = 0x00,
	SPAWN_SYNC = 0x01,
	SPAWN_LINE_BUFFERED = 0x00,
	SPAWN_STDOUT_UNBUFFERED = 0x02,
	SPAWN_STDERR_UNBUFFERED = 0x04,
	SPAWN_UNBUFFERED = 0x06,
	SPAWN_STDIN_RECURSIVE = 0x08,
	SPAWN_STDOUT_RECURSIVE = 0x10,
	SPAWN_STDERR_RECURSIVE = 0x20,
	SPAWN_RECURSIVE = 0x38,
} SpawnFlags;
typedef struct GeanyDocument GeanyDocument;
typedef struct GeanyFiletype GeanyFiletype;
typedef struct GeanyLexerStyle GeanyLexerStyle;
typedef struct _SpawnWriteData SpawnWriteData;
typedef gint TMParserType;
typedef struct TMSourceFile TMSourceFile;
typedef struct TMWorkspace TMWorkspace;
struct GeanyDocument {
	gboolean is_valid;
	gint index;
	gboolean has_tags;
	gchar* file_name;
	gchar* encoding;
	gboolean has_bom;
	GeanyEditor* editor;
	GeanyFiletype* file_type;
	TMSourceFile* tm_file;
	gboolean readonly;
	gboolean changed;
	gchar* real_path;
	guint id;
	struct GeanyDocumentPrivate* priv;
};
struct GeanyFiletype {
	GeanyFiletypeID id;
	TMParserType lang;
	gchar* name;
	gchar* title;
	gchar* extension;
	gchar** pattern;
	gchar* context_action_cmd;
	gchar* comment_open;
	gchar* comment_close;
	gboolean comment_use_indent;
	GeanyFiletypeGroupID group;
	gchar* error_regex_string;
	GeanyFiletype* lexer_filetype;
	gchar* mime_type;
	GIcon* icon;
	gchar* comment_single;
	gint indent_type;
	gint indent_width;
	struct GeanyFiletypePrivate* priv;
};
struct GeanyLexerStyle {
	gint foreground;
	gint background;
	gboolean bold;
	gboolean italic;
};
struct TMSourceFile {
	TMParserType lang;
	char* file_name;
	char* short_name;
	GPtrArray* tags_array;
};
struct TMWorkspace {
	GPtrArray* global_tags;
	GPtrArray* source_files;
	GPtrArray* tags_array;
	GPtrArray* typename_array;
	GPtrArray* global_typename_array;
};
void build_remove_menu_item (const GeanyBuildSource src, const GeanyBuildGroup grp, const gint cmd);
const gchar* build_get_current_menu_item (const GeanyBuildGroup grp, const guint cmd, const GeanyBuildCmdEntries fld);
void build_set_menu_item (const GeanyBuildSource src, const GeanyBuildGroup grp, const guint cmd, const GeanyBuildCmdEntries fld, const gchar *val);
void build_activate_menu_item (const GeanyBuildGroup grp, const guint cmd);
guint build_get_group_count (const GeanyBuildGroup grp);
GeanyDocument* document_find_by_filename (const gchar *utf8_filename);
GeanyDocument* document_find_by_id (guint id);
gboolean document_close (GeanyDocument *doc);
gint document_compare_by_display_name (gconstpointer a, gconstpointer b);
gint document_compare_by_tab_order (gconstpointer a, gconstpointer b);
gint document_compare_by_tab_order_reverse (gconstpointer a, gconstpointer b);
GType document_get_type (void);
void highlighting_set_styles (ScintillaObject *sci, GeanyFiletype *ft);
const GeanyLexerStyle* highlighting_get_style (gint ft_id, gint style_id);
gboolean highlighting_is_string_style (gint lexer, gint style);
gboolean highlighting_is_comment_style (gint lexer, gint style);
gboolean highlighting_is_code_style (gint lexer, gint style);
gboolean spawn_async (const gchar *working_directory, const gchar *command_line, gchar **argv, gchar **envp, GPid *child_pid, GError **error);
gboolean spawn_sync (const gchar *working_directory, const gchar *command_line, gchar **argv, gchar **envp, SpawnWriteData *stdin_data, GString *stdout_data, GString *stderr_data, gint *exit_status, GError **error);
void ui_add_document_sensitive (GtkWidget *widget);
GtkWidget* ui_frame_new_with_alignment (const gchar *label_text, GtkWidget **alignment);
GtkWidget* ui_dialog_vbox_new (GtkDialog *dialog);
GtkWidget* ui_button_new_with_image (const gchar *stock_id, const gchar *text);
GtkWidget* ui_image_menu_item_new (const gchar *stock_id, const gchar *label);
void ui_entry_add_clear_icon (GtkEntry *entry);
void ui_combo_box_add_to_history (GtkComboBoxText *combo_entry, const gchar *text, gint history_len);
void ui_tree_view_set_tooltip_text_column (GtkTreeView *tree_view, gint column);
void ui_widget_modify_font_from_string (GtkWidget *widget, const gchar *str);
GtkWidget* ui_path_box_new (const gchar *title, GtkFileChooserAction action, GtkEntry *entry);
void ui_widget_set_tooltip_text (GtkWidget *widget, const gchar *text);
GtkWidget* ui_lookup_widget (GtkWidget *widget, const gchar *widget_name);
void ui_progress_bar_start (const gchar *text);
void ui_progress_bar_stop (void);
gboolean ui_is_keyval_enter_or_return (guint keyval);
gint ui_get_gtk_settings_integer (const gchar *property_name, gint default_value);
const gchar* ui_lookup_stock_label (const gchar *stock_id);
void utils_open_browser (const gchar *uri);
gint utils_write_file (const gchar *filename, const gchar *text);
gchar* utils_find_open_xml_tag (const gchar sel[], gint size);
const gchar* utils_find_open_xml_tag_pos (const gchar sel[], gint size);
gint utils_str_casecmp (const gchar *s1, const gchar *s2);
gchar* utils_str_middle_truncate (const gchar *string, guint truncate_length);
gboolean utils_str_equal (const gchar *a, const gchar *b);
gchar* utils_remove_ext_from_filename (const gchar *filename);
gchar* utils_get_date_time (const gchar *format, time_t *time_to_use);
gint utils_get_setting_integer (GKeyFile *config, const gchar *section, const gchar *key, const gint default_value);
gboolean utils_get_setting_boolean (GKeyFile *config, const gchar *section, const gchar *key, const gboolean default_value);
gchar* utils_get_setting_string (GKeyFile *config, const gchar *section, const gchar *key, const gchar *default_value);
gchar* utils_get_locale_from_utf8 (const gchar *utf8_text);
gchar* utils_get_utf8_from_locale (const gchar *locale_text);
gint utils_mkdir (const gchar *path, gboolean create_parent_dirs);
GSList* utils_get_file_list_full (const gchar *path, gboolean full_path, gboolean sort, GError **error);
GSList* utils_get_file_list (const gchar *path, guint *length, GError **error);
guint utils_string_replace_all (GString *haystack, const gchar *needle, const gchar *replace);
guint utils_string_replace_first (GString *haystack, const gchar *needle, const gchar *replace);
gboolean utils_spawn_sync (const gchar *dir, gchar **argv, gchar **env, GSpawnFlags flags, GSpawnChildSetupFunc child_setup, gpointer user_data, gchar **std_out, gchar **std_err, gint *exit_status, GError **error);
gboolean utils_spawn_async (const gchar *dir, gchar **argv, gchar **env, GSpawnFlags flags, GSpawnChildSetupFunc child_setup, gpointer user_data, GPid *child_pid, GError **error);
gchar* utils_str_remove_chars (gchar *string, const gchar *chars);
gchar** utils_strv_shorten_file_list (gchar **file_names, gssize file_names_len);
gchar* utils_get_real_path (const gchar *file_name);