api/geany-1.0.vapi


[CCode (cprefix = "Geany", gir_namespace = "Geany", gir_version = "1.0", lower_case_cprefix = "geany_")]
namespace Geany {
	namespace Build {
		[CCode (cheader_filename = "geanyplugin.h", cname = "build_activate_menu_item")]
		public static void activate_menu_item (Geany.BuildGroup grp, uint cmd);
		[CCode (cheader_filename = "geanyplugin.h", cname = "build_get_current_menu_item")]
		public static unowned string? get_current_menu_item (Geany.BuildGroup grp, uint cmd, Geany.BuildCmdEntries fld);
		[CCode (cheader_filename = "geanyplugin.h", cname = "build_get_group_count")]
		public static uint get_group_count (Geany.BuildGroup grp);
		[CCode (cheader_filename = "geanyplugin.h", cname = "build_remove_menu_item")]
		public static void remove_menu_item (Geany.BuildSource src, Geany.BuildGroup grp, int cmd);
		[CCode (cheader_filename = "geanyplugin.h", cname = "build_set_menu_item")]
		public static void set_menu_item (Geany.BuildSource src, Geany.BuildGroup grp, uint cmd, Geany.BuildCmdEntries fld, string val);
	}
	namespace Highlighting {
		[CCode (cheader_filename = "geanyplugin.h", cname = "highlighting_get_style")]
		public static unowned Geany.LexerStyle? get_style (int ft_id, int style_id);
		[CCode (cheader_filename = "geanyplugin.h", cname = "highlighting_is_code_style")]
		public static bool is_code_style (int lexer, int style);
		[CCode (cheader_filename = "geanyplugin.h", cname = "highlighting_is_comment_style")]
		public static bool is_comment_style (int lexer, int style);
		[CCode (cheader_filename = "geanyplugin.h", cname = "highlighting_is_string_style")]
		public static bool is_string_style (int lexer, int style);
		[CCode (cheader_filename = "geanyplugin.h", cname = "highlighting_set_styles")]
		public static void set_styles (GeanyScintilla.ScintillaObject sci, Geany.Filetype ft);
	}
	namespace UiUtils {
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_add_document_sensitive")]
		[Version (since = "0.15")]
		public static void add_document_sensitive (Gtk.Widget widget);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_button_new_with_image")]
		public static unowned Gtk.Widget button_new_with_image (string stock_id, string text);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_combo_box_add_to_history")]
		public static void combo_box_add_to_history (Gtk.ComboBoxText combo_entry, string? text, int history_len);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_dialog_vbox_new")]
		public static unowned Gtk.Widget dialog_vbox_new (Gtk.Dialog dialog);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_entry_add_clear_icon")]
		[Version (since = "0.16")]
		public static void entry_add_clear_icon (Gtk.Entry entry);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_frame_new_with_alignment")]
		[Version (deprecated = true, deprecated_since = "1.29")]
		public static unowned Gtk.Widget frame_new_with_alignment (string label_text, Gtk.Widget alignment);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_get_gtk_settings_integer")]
		[Version (since = "0.19")]
		public static int get_gtk_settings_integer (string property_name, int default_value);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_image_menu_item_new")]
		[Version (since = "0.16")]
		public static unowned Gtk.Widget image_menu_item_new (string stock_id, string label);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_is_keyval_enter_or_return")]
		[Version (since = "0.19")]
		public static bool is_keyval_enter_or_return (uint keyval);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_lookup_stock_label")]
		public static unowned string lookup_stock_label (string stock_id);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_lookup_widget")]
		[Version (since = "0.16")]
		public static unowned Gtk.Widget lookup_widget (Gtk.Widget widget, string widget_name);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_path_box_new")]
		public static unowned Gtk.Widget path_box_new (string? title, Gtk.FileChooserAction action, Gtk.Entry entry);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_progress_bar_start")]
		[Version (since = "0.16")]
		public static void progress_bar_start (string? text);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_progress_bar_stop")]
		[Version (since = "0.16")]
		public static void progress_bar_stop ();
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_tree_view_set_tooltip_text_column")]
		[Version (since = "1.25")]
		public static void tree_view_set_tooltip_text_column (Gtk.TreeView tree_view, int column);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_widget_modify_font_from_string")]
		public static void widget_modify_font_from_string (Gtk.Widget widget, string str);
		[CCode (cheader_filename = "geanyplugin.h", cname = "ui_widget_set_tooltip_text")]
		[Version (deprecated = true, deprecated_since = "0.21", since = "0.16")]
		public static void widget_set_tooltip_text (Gtk.Widget widget, string text);
	}
	namespace Utils {
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_find_open_xml_tag")]
		public static string? find_open_xml_tag (char sel, int size);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_find_open_xml_tag_pos")]
		public static unowned string? find_open_xml_tag_pos (char sel, int size);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_date_time")]
		[Version (since = "0.16")]
		public static string get_date_time (string format, long? time_to_use);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_file_list")]
		public static GLib.SList<string>? get_file_list (string path, uint length) throws GLib.Error;
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_file_list_full")]
		public static GLib.SList<string>? get_file_list_full (string path, bool full_path, bool sort) throws GLib.Error;
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_locale_from_utf8")]
		public static string get_locale_from_utf8 (string utf8_text);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_real_path")]
		[Version (since = "1.32")]
		public static string get_real_path (string file_name);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_setting_boolean")]
		public static bool get_setting_boolean (GLib.KeyFile config, string section, string key, bool default_value);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_setting_integer")]
		public static int get_setting_integer (GLib.KeyFile config, string section, string key, int default_value);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_setting_string")]
		public static string get_setting_string (GLib.KeyFile config, string section, string key, string default_value);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_get_utf8_from_locale")]
		public static string get_utf8_from_locale (string locale_text);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_mkdir")]
		public static int mkdir (string path, bool create_parent_dirs);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_open_browser")]
		[Version (since = "0.16")]
		public static void open_browser (string uri);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_remove_ext_from_filename")]
		public static string remove_ext_from_filename (string filename);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_spawn_async")]
		public static bool spawn_async (string? dir, string argv, string? env, GLib.SpawnFlags flags, [CCode (delegate_target_pos = 5.5)] GLib.SpawnChildSetupFunc child_setup, out GLib.Pid child_pid) throws GLib.Error;
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_spawn_sync")]
		public static bool spawn_sync (string? dir, string argv, string? env, GLib.SpawnFlags flags, [CCode (delegate_target_pos = 5.5)] GLib.SpawnChildSetupFunc child_setup, out string std_out, out string std_err, out int exit_status) throws GLib.Error;
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_str_casecmp")]
		[Version (since = "0.16")]
		public static int str_casecmp (string? s1, string? s2);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_str_equal")]
		public static bool str_equal (string? a, string? b);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_str_middle_truncate")]
		[Version (since = "0.17")]
		public static string str_middle_truncate (string string, uint truncate_length);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_str_remove_chars")]
		public static string str_remove_chars (string string, string chars);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_string_replace_all")]
		public static uint string_replace_all (GLib.StringBuilder haystack, string needle, string replace);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_string_replace_first")]
		[Version (since = "0.16")]
		public static uint string_replace_first (GLib.StringBuilder haystack, string needle, string replace);
		[CCode (array_length = false, array_null_terminated = true, cheader_filename = "geanyplugin.h", cname = "utils_strv_shorten_file_list")]
		[Version (since = "1.32")]
		public static string[] strv_shorten_file_list ([CCode (array_length_cname = "num", array_length_pos = 1.1, array_length_type = "gsize")] string[] file_names);
		[CCode (cheader_filename = "geanyplugin.h", cname = "utils_write_file")]
		public static int write_file (string filename, string text);
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class App {
		public weak string configdir;
		public bool debug_mode;
		public weak Geany.Project project;
		public weak Geany.TMWorkspace tm_workspace;
	}
	[CCode (cheader_filename = "geanyplugin.h", has_type_id = false)]
	[Compact]
	public class Data {
		public weak Geany.App app;
		public weak GLib.GenericArray<Geany.Document> documents_array;
		public weak Geany.EditorPrefs editor_prefs;
		public weak Geany.FilePrefs file_prefs;
		public weak GLib.GenericArray<Geany.Filetype> filetypes_array;
		public weak GLib.SList<Geany.Filetype> filetypes_by_title;
		public weak Geany.InterfacePrefs interface_prefs;
		public weak Geany.MainWidgets main_widgets;
		public weak GLib.Object object;
		public weak Geany.Prefs prefs;
		public weak Geany.SearchPrefs search_prefs;
		public weak Geany.TemplatePrefs template_prefs;
		public weak Geany.ToolPrefs tool_prefs;
		public weak Geany.ToolbarPrefs toolbar_prefs;
	}
	[CCode (cheader_filename = "geanyplugin.h", copy_function = "g_boxed_copy", free_function = "g_boxed_free", type_id = "document_get_type ()")]
	[Compact]
	public class Document {
		public bool changed;
		public weak Geany.Editor editor;
		public weak string encoding;
		public weak string file_name;
		public weak Geany.Filetype file_type;
		public bool has_bom;
		public bool has_tags;
		public uint id;
		public bool is_valid;
		public void* priv;
		public bool readonly;
		public weak string real_path;
		public weak Geany.TMSourceFile tm_file;
		[CCode (cname = "document_close")]
		[Version (since = "0.15")]
		public bool close ();
		[CCode (cname = "document_compare_by_display_name")]
		[Version (since = "0.21")]
		public static int compare_by_display_name (void* a, void* b);
		[CCode (cname = "document_compare_by_tab_order")]
		[Version (since = "0.21")]
		public static int compare_by_tab_order (void* a, void* b);
		[CCode (cname = "document_compare_by_tab_order_reverse")]
		[Version (since = "0.21")]
		public static int compare_by_tab_order_reverse (void* a, void* b);
		[CCode (cname = "document_find_by_filename")]
		public static unowned Geany.Document? find_by_filename (string utf8_filename);
		[CCode (cname = "document_find_by_id")]
		[Version (since = "1.25.")]
		public static unowned Geany.Document find_by_id (uint id);
